--- a/projects/react-prueba-tecnica/package.json
+++ b/projects/react-prueba-tecnica/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.1",
+    "@types/node": "^24.0.7",
     "standard": "^17.1.2",
     "vite": "^6.3.5"
   },
